# agente_linkedin

./: .gitignore  Procfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
me/: summary.txt
